# llm-container

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  add_ip_ranges_to_nft_sets.py  claude_sudoers  docker-compose.yaml  entrypoint.sh  pyproject.toml  rules.nft  run_container.sh
llm/: Dockerfile  blocklist  dnf_proxy.conf  entrypoint.sh  llm_bashrc  llm_sudoers  process-links.sh  rules.nft  tinyproxy.conf  update-agents.sh
specs/: llmbox_cmd.md  network_allow.md
src/llmbox/: __init__.py  cli.py  docker.py  profiles.py  settings.py  volumes.py
tests/: test_abbreviating_group.py  test_config_cli.py  test_docker_persist.py  test_profile_cli.py  test_proxy_cli.py  test_run_cli.py  test_settings.py  test_version_cli.py  test_volume_cli.py
tinyproxy/: Dockerfile  allowlist  tinyproxy.conf
